# cipher_node_touch

./: .gitignore  CMakeLists.txt  README.md  astyle.bat  build.bat  check_build_env.bat  package-lock.json  package.json  program.jlink  simulator.cmake
.agents/skills/embedded/: SKILL.md
.codex/skills/embedded/: SKILL.md
.github/skills/embedded/: SKILL.md
.github/skills/embeded/: SKILL.md
doc/: lora_protocol.md
hardware/: cipher_node_20260330_1.tel  cipher_node_20260512_1.tel  cipher_node_20260531_1.tel
mdk/: .gitignore  cipher_node_touch.uvprojx  startup_stm32f405xx.s
simulator/: main.c
simulator/interfaces/: assert.h  battery.h  cmsis_os.h  cmsis_os2.h  command_lora_chat.h  drv_lcd.h  drv_w25qxx.h  lora.h  sht30_app.h  simulator_embedded_stubs.c  stm32f4xx_hal.h  user_assert.h
simulator/lvgl_drv/: lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
src/: STM32F405RGTx_FLASH.ld
src/FreeRTOS/: FreeRTOSConfig.h  rtos_expand.c  rtos_expand.h
src/FreeRTOS/CMSIS_RTOS_V2/: cmsis_os.h  cmsis_os2.c  cmsis_os2.h
src/FreeRTOS/Source/: tasks.c
src/application/: battery.c  battery.h  draw_on_lcd.c  draw_on_lcd.h  lock_screen.c  lock_screen.h  lora_chat.c  lora_chat.h  mqtt_chat.c  mqtt_chat.h  save_error.c  save_error.h  sht30_app.c  sht30_app.h  snapshot.c  snapshot.h
src/cm_backtrace/: cm_backtrace.c  cm_backtrace.h  cmb_cfg.h  cmb_def.h
src/cm_backtrace/Languages/en-US/: cmb_en_US.inc
src/components/checksum/: crc.c  crc.h  sha256.c
src/components/cjson/: cJSON.c  cJSON.h
src/core/: device_settings.c  device_settings.h  flash_map.h  hardware_version.c  hardware_version.h  main.c  software_version.c  software_version.h  startup.c  startup.h  stm32f4xx_hal_conf.h  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  stm32f4xx_it.h  syscalls.c  sysmem.c  system_stm32f4xx.c
src/driver/: drv_adc.c  drv_adc.h  drv_button.c  drv_button.h  drv_dma.c  drv_dma.h  drv_gpio.c  drv_gpio.h  drv_i2c.c  drv_i2c.h  drv_i2c_io.c  drv_i2c_io.h  drv_lcd.c  drv_lcd.h  drv_power_switch.c  drv_power_switch.h  drv_sht30.c  drv_sht30.h  drv_spi.c  drv_spi.h  drv_sys.c  drv_sys.h  drv_timer.c  drv_timer.h  drv_touch.c  drv_touch.h  drv_trng.c  drv_trng.h  drv_uart.c  drv_uart.h  drv_w25qxx.c  drv_w25qxx.h  w25qxxConf.h
src/driver/llcc68/: driver_llcc68.c  driver_llcc68.h  driver_llcc68_interface.c  driver_llcc68_interface.h
src/fatfs/: diskio.c  diskio.h  ff.c  ff.h  ffconf.h  ffsystem.c
src/msg/: general_msg.c  general_msg.h  user_msg.c  user_msg.h
src/porting/: lv_conf.h  lv_mem_core_custom.c  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c
src/st_libs/CMSIS/Include/: core_armv81mml.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm35p.h  core_cm55.h  core_cm7.h  core_cm85.h  core_sc000.h  core_sc300.h  core_starmc1.h  mpu_armv8.h  pac_armv81.h  pmu_armv8.h
src/st_libs/STM32F4xx_HAL_Driver/Inc/: stm32_assert_template.h  stm32f4xx_hal.h  stm32f4xx_hal_adc.h  stm32f4xx_hal_adc_ex.h  stm32f4xx_hal_can.h  stm32f4xx_hal_cec.h  stm32f4xx_hal_conf_template.h  stm32f4xx_hal_cortex.h  stm32f4xx_hal_crc.h  stm32f4xx_hal_cryp.h  stm32f4xx_hal_dac.h  stm32f4xx_hal_dcmi.h  stm32f4xx_hal_dcmi_ex.h  stm32f4xx_hal_def.h  stm32f4xx_hal_dfsdm.h  stm32f4xx_hal_dma.h  stm32f4xx_hal_dma2d.h  stm32f4xx_hal_dma_ex.h  stm32f4xx_hal_dsi.h  stm32f4xx_hal_eth.h  stm32f4xx_hal_exti.h  stm32f4xx_hal_flash.h  stm32f4xx_hal_flash_ex.h  stm32f4xx_hal_fmpi2c.h  stm32f4xx_hal_fmpsmbus.h  stm32f4xx_hal_gpio.h  stm32f4xx_hal_gpio_ex.h  stm32f4xx_hal_hcd.h  (+62 more)
src/tasks/: background_task.c  background_task.h  cmd_task.c  cmd_task.h  startup_task.c  startup_task.h  test_task.c  test_task.h  touch_task.c  touch_task.h  ui_task.c  ui_task.h  usb_task.c  usb_task.h  wireless_task.c  wireless_task.h
src/test/: processor_usage.c  processor_usage.h  test_cmd.c  test_cmd.h  wifi_test.c  wifi_test.h
src/ui/fonts/: lv_font_mix_14.c
src/ui/framework/: navigation_bar.c  navigation_bar.h  page.c  page.h  status_bar.c  status_bar.h  ui_color.h  ui_msg.c  ui_msg.h  ui_msg_code.h
src/ui/i18n/: en.yml  i18n.csv  ko.yml  lv_i18n.c  zh-cn.yml
src/ui/images/: battery.c  cipher_node_touch_logo.c  generate_img_c.bat  images_declare.h  img_back.c  img_battery.c  img_lock.c  img_lora_signal.c  img_settings.c  img_tile_left.c  img_tile_right.c  img_wifi_disabled.c  img_wifi_signal.c  img_wifi_signal_weak1.c  img_wifi_signal_weak2.c  img_wifi_signal_weak3.c  lora_signal.c  wifi_disabled.c  wifi_signal.c
src/ui/pages/: about_page.c  chat_settings.c  chat_settings_page.c  home_page.c  language_page.c  lcd_brightness_page.c  lcd_settings_page.c  lora_chat_page.c  lora_chat_settings_page.c  mqtt_chat_page.c  mqtt_chat_settings_page.c  pages_declare.h  sensor_page.c  sensor_page.h  snake_page.c  system_page.c  touch_test_page.c  widget_color_page.c  wifi_page.c
src/ui/themes/: lv_theme_pocket.c  lv_theme_pocket.h
src/ui/widgets/: confirm_win.c  confirm_win.h  input_number.c  input_number.h  input_string.c  input_string.h  input_text.c  input_text.h  loading_spinner.c  loading_spinner.h  select_number.c  select_number.h  tile_dots.c  tile_dots.h  user_menu.c  user_menu.h  widgets_line.c  widgets_line.h
src/usb_device/App/: usb_device.c  usb_device.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c  usbd_desc.h  usbd_storage_if.c  usbd_storage_if.h
src/utils/: ring_buffer.c  ring_buffer.h  user_assert.c  user_assert.h  user_delay.c  user_fs.c  user_fs.h  user_memory.c  user_memory.h  user_utils.c  user_utils.h
src/wifi/: at_command.c  at_command.h  mqtt.c  mqtt.h  mqtt_connect.c  mqtt_connect.h  search_wifi.c  search_wifi.h  wifi_connect.c  wifi_connect.h  wifi_search.c  wifi_search.h
src/wireless/: command_lora_chat.c  command_lora_chat.h  lora.c  lora.h  protocol_codec.c  protocol_codec.h  protocol_parse.c  protocol_parse.h
test/: serial_test_plan_flash_perf.json
tools/: extract_chinese_chars.py  flash_and_serial_test.bat  generate_i18n.py  generate_mixed_font.py  serial_test.ps1  serial_test_plan.json
tools/ota_file_maker/: key.json
(+112 files in other folders)
